# PlayFieldPortal

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  build-debug-apk.bat  build.gradle.kts  build_errors.txt  gradle.properties  gradlew  install-built-apk.bat  run-theme-studio.bat  settings.gradle.kts
.codex/: hooks.json
.github/workflows/: unit-tests.yml
.run/: Install Lite (emulator).run.xml  app (lite).run.xml
app/: build.gradle.kts  proguard-rules.pro
core/core-common/: build.gradle.kts
core/core-data/: build.gradle.kts
core/core-domain/: build.gradle.kts
core/core-ui/: build.gradle.kts
core/theme-kit/: build.gradle.kts
discord/discord-native/: README.md  build.gradle.kts
discord/discord-native/src/main/cpp/: CMakeLists.txt  DiscordBridge.cpp
docs/: account-achievements-plan.md  discord-social-integration-plan.md  emulator-intent-catalog-research.md  icon-system-plan.md  local-steam-achievements-plan.md  official-ptf-template.md  pc-local-achievements-plan.md  portable-artwork-plan.md  portable-media-library-plan.md  ptf-import-plan.md  shiba-coins-achievements-plan.md  ss-media-url-cache-plan.md  theme-implementation-roadmap.md  theme-studio-v2-plan.md  windows-library-refactor-plan.md  xmb-theme-creator-plan.md
docs/legal/: privacy-policy.md  terms-of-service.md
feature/feature-achievements/: build.gradle.kts
feature/feature-appbar/: build.gradle.kts
feature/feature-artwork/: build.gradle.kts
feature/feature-backup/: build.gradle.kts
gradle/: libs.versions.toml
studio/: build.gradle.kts
(+670 files in other folders)
